# manta-hic

./: .flake8  .gitignore  NOTICE  README.md  environemnt.yml  pyproject.toml  requirements.txt
manta_hic/: cli.py  training_meta.py
manta_hic/data/: borzoi_folds.pq  borzoi_seqs_hg38.pq  borzoi_seqs_mm10.pq  borzoi_targs_hg38.pq  borzoi_targs_mm10.pq
manta_hic/io/: banded.py  banded_write.py  cool_io.py
manta_hic/nn/: layers.py  manta.py  microzoi.py  mutate_manta.py  train_manta.py  train_microzoi.py
manta_hic/ops/: hic_ops.py  seq_ops.py  tensor_ops.py
scripts/: train_manta.sh
tests/: test_banded.py  test_banded_write.py  test_fetcher.py  test_seq_ops.py
