[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manta-hic"
version = "0.0.1"
description = "A neural network for reproducing Hi-C data from sequence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Max Imakaev", email = "mimakaev@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch", "numpy", "pysam","polars"]  # Add runtime dependencies here
requires-python = ">=3.10"
