[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manta-hic"
version = "0.0.1"
description = "A neural network for reproducing Hi-C data from sequence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Max Imakaev", email = "mimakaev@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Modern floors only -- no backwards compatibility, no old Python/library support (see CLAUDE.md / requirements.txt).
dependencies = [
    "torch>=2.6",
    "numpy>=2.0",
    "pandas>=2.2",
    "polars>=1.0",
    "pysam>=0.23",
    "click>=8.1",
    "hdf5plugin>=4.4",
    "h5py>=3.11",
    "bioframe>=0.7",
    "cooler>=0.10",
    "cooltools>=0.7",
    "numba>=0.60",
    "ushuffle>=1.1.2",
]
requires-python = ">=3.12"

[project.scripts]
manta_hic = "manta_hic.cli:cli"

[tool.setuptools.package-data]
manta_hic = ["data/*"]

